@@ -284,131 +284,6 @@
 			</build>
 		</profile>
 		<profile>
-			<id>tst</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>${maven.javadoc.version}</version>
-						<executions>
-							<execution>
-								<id>attach-javadocs</id>
-								<goals>
-									<goal>jar</goal>
-								</goals>
-								<configuration>
-									<show>public</show>
-									<failOnError>true</failOnError>
-									<failOnWarnings>true</failOnWarnings>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<configuration>
-							<parameters>true</parameters>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-maven-plugin</artifactId>
-						<configuration>
-							<jvmArguments>
-								-Xdebug - Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005
-							</jvmArguments>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.22.2</version>
-						<configuration>
-							<skipTests>false</skipTests>
-							<argLine>-XX:+EnableDynamicAgentLoading</argLine>
-						</configuration>
-					</plugin>
-					<!--					sss-->
-					<plugin>
-						<groupId>org.jacoco</groupId>
-						<artifactId>jacoco-maven-plugin</artifactId>
-						<version>${jacoco.version}</version>
-						<configuration>
-							<output>file</output>
-							<append>true</append>
-							<excludes>
-								<exclude>**/dto/*</exclude>
-								<exclude>**/views/*</exclude>
-								<exclude>**/entities/*</exclude>
-							</excludes>
-						</configuration>
-						<executions>
-							<execution>
-								<id>prepare-agent</id>
-								<goals>
-									<goal>prepare-agent</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>check</id>
-								<goals>
-									<goal>check</goal>
-								</goals>
-								<configuration>
-									<rules>
-										<rule>
-											<element>BUNDLE</element>
-											<limits>
-												<limit>
-													<counter>INSTRUCTION</counter>
-													<value>COVEREDRATIO</value>
-													<minimum>0.80</minimum>
-												</limit>
-												<limit>
-													<counter>BRANCH</counter>
-													<value>COVEREDRATIO</value>
-													<minimum>0.70</minimum>
-												</limit>
-											</limits>
-										</rule>
-										<rule>
-											<element>CLASS</element>
-											<includes>
-												<include>com.example.project.MyImportantClass</include>
-											</includes>
-											<limits>
-												<limit>
-													<counter>LINE</counter>
-													<value>COVEREDRATIO</value>
-													<minimum>0.90</minimum>
-												</limit>
-											</limits>
-										</rule>
-									</rules>
-								</configuration>
-							</execution>
-							<execution>
-								<id>jacoco-site</id>
-								<phase>package</phase>
-								<goals>
-									<goal>report</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>report</id>
-								<phase>prepare-package</phase>
-								<goals>
-									<goal>report</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
 			<id>coverage</id>
 			<properties>
 				<spring.profiles.active>coverage</spring.profiles.active>
